# kinect

./: .gitignore  CMakeLists.txt  README.md  kinect.cpp
include/: kinect_log.h  kinect_record.h  kinect_type.h
src/: CMakeLists.txt  kinect_log.cpp  kinect_mkv2_volumetric_video.cpp  volumetric_video.cpp
